committing check for empty object property during array-to-object casting. This is for bug #67300